@@ -24,11 +24,9 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.util.log.Log;
 
 import java.io.IOException;
-import java.net.SocketException;
-import java.net.URL;
+import java.net.URI;
 
 /**
  *
@@ -51,9 +49,9 @@ public class StopMojo extends AbstractMojo {
 
             try {
                 String url = "http://localhost:" + reststopPort + "/shutdown";
-                new URL(url).openStream();
+                URI.create(url).toURL().openStream();
             } catch (IOException e) {
-                Log.getLog().ignore(e);
+                getLog().error(e);
             }
 
 
